# textile-production-payroll-erp

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  requirements.txt  seed_perms.py
backend/attendance/: models.py  views.py  (+1 more)
database/: seed_data.py
docs/: API_DOCS.md
frontend/: Dockerfile  package-lock.json  package.json
god_brain_core/: main.py  requirements.txt  test_agent_manager.py  test_decision_core.py  test_goal_planner.py  test_knowledge_brain.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase8.py  test_tools.py
micro_brain/: main.py
wraith-core/: Cargo.toml  linker.ld
wraith-core/.cargo/: config.toml
wraith-core/src/: gdt.rs  interrupts.rs  main.rs  serial.rs  vga.rs
wraith-core/src/drivers/: device.rs  input.rs  keyboard.rs  mod.rs
wraith-core/src/elf/: error.rs  loader.rs  mod.rs  parser.rs  types.rs
wraith-core/src/fs/: file.rs  initramfs.rs  inode.rs  mod.rs  vfs.rs
wraith-core/src/hardware/: mod.rs  shield.rs
wraith-core/src/ipc/: manager.rs  message.rs  mod.rs  queue.rs
wraith-core/src/memory/: allocator.rs  frame_allocator.rs  layout.rs  manager.rs  masking.rs  mod.rs
wraith-core/src/memory/paging/: flags.rs  mapper.rs  mod.rs  page_table.rs
wraith-core/src/process/: memory_space.rs  mod.rs  process.rs
wraith-core/src/scheduler/: context_switch.rs  mod.rs  run_queue.rs  spinlock.rs  task.rs  timer.rs
wraith-core/src/security/: entropy.rs  mod.rs  stealth.rs
wraith-core/src/user/: context.rs  mod.rs  syscall.rs
(+160 files in other folders)
