[package]
name = "wraith-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = { version = "0.14.10", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
