[package]
name = "wraith-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = { version = "0.14.11", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
uart_16550 = "0.3.0"
bitflags = "2.4.1"
